--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ deploy:
   skip_cleanup: true
   local_dir: dist/
   github_token: $GITHUB_TOKEN
-  keep_history: true
+  keep_history: false
   name: linosau
   email: jeremy_liu62@163.com
   on: 
